Add all LoadFileParams parameters

--- a/test/index.html
+++ b/test/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="ngl-viewer" style="width: 1280px; height: 720px;"></div>
-    <script src="ngl.embedded.min.js"></script>
+    <script src="packages/ngl_viewer/ngl.embedded.min.js"></script>
     <script src="index.dart" type="application/dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
