--- a/web/index.html
+++ b/web/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>NGL Dart interop example</title>
+    <script src="packages/ngl_viewer/ngl.js"></script>
   </head>
   <body>
     <div id="ngl-viewer" style="width: 1280px; height: 720px;"></div>
-    <script src="packages/ngl_viewer/ngl.embedded.min.js"></script>
-    <script src="index.dart" type="application/dart"></script>
-    <script src="packages/browser/dart.js"></script>
+    <script src="main.dart.js"></script>
   </body>
 </html>
